--- a/app/src/main/res/layout/activity_reservar_material.xml
+++ b/app/src/main/res/layout/activity_reservar_material.xml
@@ -209,13 +209,16 @@
 
                     <EditText
                         android:id="@+id/fechaRecogidaEditText"
-                        android:layout_width="wrap_content"
+                        android:layout_width="117dp"
                         android:layout_height="wrap_content"
                         android:layout_gravity="right"
                         android:layout_margin="10dp"
+                        android:clickable="true"
                         android:ems="3"
+                        android:focusable="false"
+                        android:hint="01/01/2020"
                         android:inputType="date"
-                        android:text=" " />
+                        android:maxLines="1" />
                 </LinearLayout>
             </LinearLayout>
         </TableRow>
