--- a/app/src/main/res/layout/activity_reservar_material.xml
+++ b/app/src/main/res/layout/activity_reservar_material.xml
@@ -44,7 +44,7 @@
 
                 <LinearLayout
                     android:layout_width="wrap_content"
-                    android:layout_height="match_parent"
+                    android:layout_height="wrap_content"
                     android:orientation="vertical">
 
                     <TextView
@@ -61,20 +61,20 @@
 
                 <LinearLayout
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
+                    android:layout_height="match_parent"
                     android:layout_gravity="right"
                     android:layout_marginRight="50dp"
                     android:orientation="vertical">
 
-                    <EditText
-                        android:id="@+id/packEditText"
+                    <Spinner
+                        android:id="@+id/spinner"
                         android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_margin="10dp"
-                        android:ems="3"
+                        android:layout_height="match_parent"
                         android:layout_gravity="right"
-                        android:inputType="textPersonName"
-                        android:text=" " />
+                        android:layout_margin="10dp"
+                        android:ems="3" />
+
+
                 </LinearLayout>
             </LinearLayout>
         </TableRow>
