Listar pistas, vista del usuario en funcion de si es cliente o trabajador

--- a/app/src/main/res/layout/activity_list_pistas.xml
+++ b/app/src/main/res/layout/activity_list_pistas.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".SelectEstacionActivity">
+    tools:context=".ListPistasActivity">
 
     <TextView
         android:id="@+id/textListaDePistas"
@@ -13,23 +13,9 @@
         android:layout_marginTop="50dp"
         android:text="Lista de pistas:\n-------------------------"
         android:textColor="@color/AzulOscuro3"
-        android:textSize="26sp"
+        android:textSize="32sp"
         android:layout_marginRight="25dp"
         android:layout_marginLeft="25dp"/>
-
-    <!--
-    <ListView
-        android:id="@+id/idListViewEstaciones"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_below="@+id/textSeleccionarEstacion"
-        android:layout_marginTop="15dp"
-        android:layout_marginBottom="25dp"
-        android:layout_marginRight="25dp"
-        android:layout_marginLeft="25dp">
-
-
-    </ListView>-->
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/idListViewPistas"
@@ -42,5 +28,16 @@
         android:layout_marginLeft="25dp">
 
     </androidx.recyclerview.widget.RecyclerView>
+
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/add_pista_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:clickable="true"
+        android:backgroundTint="@color/AzulClaro"
+        android:visibility="invisible"
+        app:srcCompat="@android:drawable/ic_input_add"
+        android:layout_alignBottom="@+id/idListViewPistas"
+        android:layout_alignRight="@+id/idListViewPistas" />
 
 </RelativeLayout>
