Boton de editar en PistaActivity

--- a/app/src/main/res/layout/activity_pista.xml
+++ b/app/src/main/res/layout/activity_pista.xml
@@ -98,5 +98,19 @@
         android:text="..."
         android:textSize="26sp"/>
 
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/edit_pista_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:clickable="true"
+        android:backgroundTint="@color/AzulClaro"
+        android:foregroundTint="@color/AzulClaro"
+        android:visibility="visible"
+        app:srcCompat="@android:drawable/ic_menu_edit"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentRight="true"
+        android:layout_marginBottom="25dp"
+        android:layout_marginRight="25dp"/>
+
 
   </RelativeLayout>
