--- a/app/src/main/res/layout/activity_list_pistas.xml
+++ b/app/src/main/res/layout/activity_list_pistas.xml
@@ -35,9 +35,12 @@
         android:layout_height="wrap_content"
         android:clickable="true"
         android:backgroundTint="@color/AzulClaro"
-        android:visibility="invisible"
+        android:foregroundTint="@color/AzulClaro"
+        android:visibility="visible"
         app:srcCompat="@android:drawable/ic_input_add"
-        android:layout_alignBottom="@+id/idListViewPistas"
-        android:layout_alignRight="@+id/idListViewPistas" />
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentRight="true"
+        android:layout_marginBottom="25dp"
+        android:layout_marginRight="25dp"/>
 
 </RelativeLayout>
