--- a/app/src/main/res/layout/activity_list_pistas.xml
+++ b/app/src/main/res/layout/activity_list_pistas.xml
@@ -36,7 +36,7 @@
         android:clickable="true"
         android:backgroundTint="@color/AzulClaro"
         android:foregroundTint="@color/AzulClaro"
-        android:visibility="visible"
+        android:visibility="invisible"
         app:srcCompat="@android:drawable/ic_input_add"
         android:layout_alignParentBottom="true"
         android:layout_alignParentRight="true"
