--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -99,6 +99,7 @@
                             android:textSize="35sp"/>
 
                         <TextView
+                            android:id="@+id/entrenamientos"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_gravity="center_horizontal"
