--- a/app/src/main/res/layout/activity_list_pistas.xml
+++ b/app/src/main/res/layout/activity_list_pistas.xml
@@ -42,5 +42,18 @@
         android:layout_alignParentRight="true"
         android:layout_marginBottom="25dp"
         android:layout_marginRight="25dp"/>
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/close_training"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:clickable="true"
+        android:backgroundTint="@color/AzulClaro"
+        android:foregroundTint="@color/AzulClaro"
+        android:visibility="invisible"
+        app:srcCompat="@android:drawable/ic_media_pause"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentRight="true"
+        android:layout_marginBottom="25dp"
+        android:layout_marginRight="25dp"/>
 
 </RelativeLayout>
