--- a/app/src/main/res/layout/pistas_list_item.xml
+++ b/app/src/main/res/layout/pistas_list_item.xml
@@ -31,4 +31,13 @@
         android:text="..."
         android:textSize="14sp"/>
 
+    <TextView
+        android:layout_alignBottom="@id/nombrePistaList"
+        android:id="@+id/disponiblePistaList"
+        android:layout_alignParentRight="true"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text=""
+        android:textSize="14sp"/>
+
 </RelativeLayout>
