--- a/app/src/main/res/layout/activity_crear_grupos.xml
+++ b/app/src/main/res/layout/activity_crear_grupos.xml
@@ -1,5 +1,198 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    tools:context=".CrearGruposActivity">
+
+    <Button
+        android:id="@+id/botonAtrasCrearGrupos"
+        android:layout_width="65dp"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="10dp"
+        android:layout_marginTop="5dp"
+        android:background="@drawable/abc_vector_test"
+        app:backgroundTint="@color/azulOscuro"
+        app:srcCompat="@drawable/abc_vector_test" />
+
+    <TextView
+        android:id="@+id/text_Crear_Grupos"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
+        android:layout_centerHorizontal="true"
+        android:layout_marginLeft="20dp"
+        android:layout_toRightOf="@+id/botonAtrasCrearGrupos"
+        android:gravity="center"
+        android:text="Crear nuevo grupo"
+        android:textSize="30dp" />
+
+    <TextView
+        android:id="@+id/textViewNombreGrupo"
+        android:layout_below="@+id/text_Crear_Grupos"
+        android:layout_marginTop="40dp"
+        android:layout_marginLeft="40dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Nombre:"
+        android:textStyle="bold"
+        android:textSize="18sp" />
+
+    <EditText
+        android:id="@+id/editTextNombreGrupo"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:minWidth="80dp"
+        android:maxWidth="180dp"
+        android:layout_below="@+id/text_Crear_Grupos"
+        android:layout_alignBaseline="@+id/textViewNombreGrupo"
+        android:layout_toRightOf="@+id/textViewParticipantes"
+        android:layout_marginLeft="10dp"
+        android:layout_marginTop="40dp"
+        android:inputType="textPersonName" />
+
+    <TextView
+        android:id="@+id/textViewActividad"
+        android:layout_below="@+id/textViewNombreGrupo"
+        android:layout_alignLeft="@+id/textViewNombreGrupo"
+        android:layout_marginTop="20dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Actividad:"
+        android:textStyle="bold"
+        android:textSize="18sp" />
+
+    <Spinner
+        android:id="@+id/spinnerActividad"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignLeft="@+id/editTextNombreGrupo"
+        android:layout_alignBottom="@+id/textViewActividad"
+        />
+
+    <TextView
+        android:id="@+id/textViewNivel"
+        android:layout_below="@+id/textViewActividad"
+        android:layout_alignLeft="@+id/textViewActividad"
+        android:layout_marginTop="20dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Nivel:"
+        android:textStyle="bold"
+        android:textSize="18sp" />
+
+    <Spinner
+        android:id="@+id/spinnerNivel"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignLeft="@+id/editTextNombreGrupo"
+        android:layout_alignBottom="@+id/textViewNivel"
+        />
+
+    <TextView
+        android:id="@+id/textViewParticipantes"
+        android:layout_below="@+id/textViewNivel"
+        android:layout_alignLeft="@+id/textViewNivel"
+        android:layout_marginTop="20dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Nº participantes:"
+        android:textStyle="bold"
+        android:textSize="18sp" />
+
+    <EditText
+        android:id="@+id/editTextParticipantes"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:minWidth="20dp"
+        android:layout_alignLeft="@+id/editTextNombreGrupo"
+        android:layout_alignBottom="@+id/textViewParticipantes"
+        android:inputType="number" />
+
+    <TextView
+        android:id="@+id/textViewFecha"
+        android:layout_below="@+id/textViewLugar"
+        android:layout_alignLeft="@+id/textViewLugar"
+        android:layout_marginTop="20dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Fecha:"
+        android:textStyle="bold"
+        android:textSize="18sp" />
+
+    <EditText
+        android:id="@+id/editTextFecha"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:minWidth="50dp"
+        android:layout_alignLeft="@+id/editTextNombreGrupo"
+        android:layout_alignBaseline="@+id/textViewFecha"
+        android:clickable="true"
+        android:focusable="false"
+        android:inputType="date"
+        android:maxLines="1" />
+
+    <TextView
+        android:id="@+id/textViewLugar"
+        android:layout_below="@+id/textViewParticipantes"
+        android:layout_alignLeft="@+id/textViewParticipantes"
+        android:layout_marginTop="20dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Lugar:"
+        android:textStyle="bold"
+        android:textSize="18sp" />
+
+    <EditText
+        android:id="@+id/editTextLugar"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:minWidth="80dp"
+        android:maxWidth="180dp"
+        android:layout_alignLeft="@+id/editTextNombreGrupo"
+        android:layout_alignBottom="@+id/textViewLugar"
+        android:inputType="textPersonName" />
+
+    <TextView
+        android:id="@+id/textViewHora"
+        android:layout_below="@+id/textViewFecha"
+        android:layout_alignLeft="@+id/textViewLugar"
+        android:layout_marginTop="20dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Hora:"
+        android:textStyle="bold"
+        android:textSize="18sp" />
+
+    <EditText
+        android:id="@+id/editTextHora"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:minWidth="50dp"
+        android:layout_alignLeft="@+id/editTextNombreGrupo"
+        android:layout_alignBaseline="@+id/textViewHora"
+        android:clickable="true"
+        android:focusable="false"
+        android:inputType="time"
+        android:maxLines="1" />
+
+    <Button
+        android:id="@+id/botonCrearGrupo"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:text="Crear Grupo"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="40dp"
+        android:layout_below="@+id/editTextHora"
+        android:textColorHighlight="@color/azul" />
+
+
+
+</RelativeLayout>
+<!--<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -138,4 +331,4 @@
             app:backgroundTint="@color/azul" />
 
     </LinearLayout>
-</androidx.constraintlayout.widget.ConstraintLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>-->
