--- a/app/src/main/res/layout/activity_group.xml
+++ b/app/src/main/res/layout/activity_group.xml
@@ -7,6 +7,16 @@
     tools:context=".GroupActivity">
 
     <Button
+        android:id="@+id/botonAtrasGrupos"
+        android:layout_width="65dp"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="10dp"
+        android:layout_marginTop="5dp"
+        android:background="@drawable/abc_vector_test"
+        app:backgroundTint="@color/azulOscuro"
+        app:srcCompat="@drawable/abc_vector_test" />
+
+    <Button
         android:id="@+id/botonCrearGrupo"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -14,7 +24,7 @@
         android:layout_gravity="center_horizontal"
         android:layout_marginTop="40dp"
         android:text="Crear Nuevo Grupo"
-        app:backgroundTint="@color/azulOscuro" />
+        android:textColorHighlight="@color/azul" />
 
     <TextView
         android:id="@+id/textListaDeGrupos"
@@ -22,7 +32,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
         android:layout_below="@+id/botonCrearGrupo"
-        android:text="Lista de grupos:\n-------------------------"
+        android:text="Seleccione grupo para unirse:\n-------------------------"
         android:textColor="@color/AzulOscuro3"
         android:textSize="32sp"
         android:layout_marginRight="25dp"
