--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -16,5 +16,9 @@
             android:id="@+id/nav_notifications"
             android:icon="@drawable/ic_baseline_notifications_24"
             android:title="@string/menu_notifications" />
+        <item
+            android:id="@+id/nav_ajustes"
+            android:icon="@drawable/ic_settings"
+            android:title="Ajustes" />
     </group>
 </menu>
