--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -19,4 +19,5 @@
     <color name="AzulOscuro3">#406E8E</color>
     <color name="AzulClaro">#8EA8C3</color>
     <color name="AzulClaro2">#CBF7ED</color>
+    <color name="Rojo">#ff0000</color>
 </resources>
